@@ -68,6 +68,12 @@
             <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.vladsch.flexmark</groupId>
+            <artifactId>flexmark-all</artifactId>
+            <version>0.64.8</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -120,6 +126,18 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
             </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>br.edu.fatec.api.App</mainClass>
+                    <jvmArgs>
+                        --add-reads br.edu.fatec.api=ALL-UNNAMED
+                    </jvmArgs>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
